[package]
authors = ["André Waltert"]
description = "Toy Payment Engine processing transactions and computing client account balances"
documentation = "README.md"
edition = "2024"
license-file = "License.md"
name = "toy-payment-engine"
publish = false
readme = "README.md"
repository = ""
rust-version = "1.90.0"
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
csv = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
rust_decimal = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"

[dev-dependencies]
claims = "0.8"

[workspace.lints.clippy]
clone_on_ref_ptr = "warn"
unwrap_used = "warn"
expect_used = "warn"

[workspace.lints.rust]
unsafe_code = "warn"
